# detection-forge

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-19-detection-forge.md
docs/superpowers/specs/: 2026-04-19-detection-forge-design.md
scripts/: pull_corpora.py
src/detection_forge/: config.py  db.py
src/detection_forge/api/: app.py  deps.py
src/detection_forge/api/routes/: coverage.py  cti.py  rules.py
src/detection_forge/attack/: coverage.py  mapper.py
src/detection_forge/cti/: loader.py  models.py
src/detection_forge/cti/parsers/: misp.py  pdf.py  stix.py  taxii.py  text.py
src/detection_forge/forge/: models.py  pipeline.py  validator.py
src/detection_forge/llm/: gateway.py  models.py
src/detection_forge/llm/prompts/: classify.j2  draft_sigma.j2  draft_yara.j2  extract.j2  refine.j2
src/detection_forge/llm/providers/: base.py  gemini.py  groq.py  ollama.py
src/detection_forge/tester/: corpus.py  scoring.py  sigma_runner.py  yara_runner.py
src/detection_forge/vector/: store.py
tests/integration/: test_pipeline.py
tests/unit/: test_app_health.py  test_db.py  test_metrics.py  test_routes.py
tests/unit/attack/: test_coverage.py  test_mapper.py
tests/unit/cti/: test_models.py  test_parsers.py  test_text_parser.py
tests/unit/forge/: test_validator.py
tests/unit/llm/: test_gateway.py  test_providers.py
tests/unit/tester/: test_corpus.py  test_scoring.py  test_sigma_runner.py  test_yara_runner.py
(+5 files in other folders)
