[project]
name = "detection-forge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.18",
    "httpx>=0.27.0",
    "google-generativeai>=0.8.0",
    "groq>=0.12.0",
    "ollama>=0.4.0",
    "pysigma>=0.11.0",
    "pySigma-backend-elasticsearch>=1.1.0",
    "yara-python>=4.5.0",
    "stix2>=3.0.1",
    "taxii2-client>=2.3.0",
    "pymisp>=2.4.196",
    "pdfplumber>=0.11.4",
    "mitreattack-python>=3.0.6",
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.3.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "hypothesis>=6.112.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
